# GenM3

./: .gitignore  Cargo.toml  README.md  TODO.md  after.rs  before.rs  load.glsl
gen_ui/: Cargo.toml
gen_ui/src/: lib.rs
gen_ui/src/components/: lifecycle.rs  live_props.rs  mod.rs  traits.rs
gen_ui/src/components/badge/: event.rs  mod.rs  prop.rs  register.rs
gen_ui/src/components/button/: event.rs  mod.rs  prop.rs
gen_ui/src/components/card/: event.rs  mod.rs  prop.rs
gen_ui/src/components/checkbox/: event.rs  group.rs  mod.rs  prop.rs  register.rs
gen_ui/src/components/collapse/: event.rs  mod.rs  prop.rs
gen_ui/src/components/color_picker/: mod.rs  register.rs
gen_ui/src/components/container/: mod.rs
gen_ui/src/components/divider/: mod.rs  prop.rs
gen_ui/src/components/drop_down/: event.rs  mod.rs
gen_ui/src/components/image/: async_impl.rs  mod.rs  prop.rs
gen_ui/src/components/input/: event.rs  mod.rs  (+3 more)
gen_ui/src/error/: mod.rs
gen_ui/src/macros/: animation.rs  component.rs  event.rs  from.rs  impl_ref.rs  impl_self.rs  inherits.rs  live_hook.rs  mod.rs  prop.rs  state.rs
gen_ui/src/prop/: defer_walk.rs  direction.rs  manuel.rs  map.rs  mod.rs  prop_converter.rs  radius.rs  route.rs  slot.rs  src.rs
gen_ui/src/shader/: animation.rs  draw_checkbox.rs  draw_color_picker.rs  draw_dot.rs  draw_image.rs  draw_input.rs  draw_link.rs  draw_loading.rs  draw_popup.rs  draw_progress.rs  draw_radio.rs  draw_rate.rs  draw_slider.rs  draw_svg.rs  draw_switch.rs  draw_view.rs  mod.rs
gen_ui/src/themes/: conf.rs  mod.rs
gen_ui/src/utils/: mod.rs
(+179 files in other folders)
